# RegressionIQ

./: .gitignore  README.md  pyproject.toml  regressioniq.json
docs/: phase-1.md  phase-2.md  phase-3.md
eval_cases/: api_signature_change.json  comment_only_change.json  condition_change.json  formatting_only_change.json  local_variable_rename.json  return_value_change.json  security_sensitive_change.json
regressioniq/: __init__.py  analyzer.py  config.py  main.py  models.py
regressioniq/classifier/: __init__.py  change_classifier.py
regressioniq/decision/: __init__.py  engine.py
regressioniq/evaluation/: __init__.py  runner.py
regressioniq/generation/: __init__.py  client.py  models.py  prompt.py  service.py  storage.py
regressioniq/git/: __init__.py  collector.py
regressioniq/impact/: __init__.py  analyzer.py  graph_builder.py  models.py  test_mapper.py
regressioniq/parsing/: __init__.py  python_ast.py
regressioniq/reporting/: reporter.py
regressioniq/retrieval/: __init__.py  context_retriever.py
regressioniq/risk/: scorer.py
regressioniq/semantic_diff/: __init__.py  engine.py
tests/: test_evaluation.py  test_git_analysis.py  test_phase2_impact.py  test_phase3_generation.py  test_semantic_diff.py
