[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regressioniq"
version = "0.1.0"
description = "Phase 1 semantic change analysis and regression test decision engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
parser = [
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.21",
]

[project.scripts]
regressioniq = "regressioniq.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

