[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regressioniq"
version = "0.1.0"
description = "AI-powered regression impact analysis and pytest generation workflow."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
llm = [
  "google-genai>=1.0",
]
parser = [
  "tree-sitter>=0.22",
  "tree-sitter-python>=0.21",
]

[project.scripts]
regressioniq = "regressioniq.main:main"

[tool.setuptools.packages.find]
include = ["regressioniq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
